--- a/index.html
+++ b/index.html
@@ -240,6 +240,21 @@
             <div class="row">
               <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                 <div class="card-body cc-education-header">
+                  <p>2023 – Present</p>
+                  <div class="h5">Politeknik</div>
+                </div>
+              </div>
+              <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                <div class="card-body">
+                  <div class="h5">Politeknik Meta Industri Cikarang</div>
+                  <p class="category">(DevOps Engineering)</p>
+
+                </div>
+              </div>
+              <div class="card">
+            <div class="row">
+              <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                <div class="card-body cc-education-header">
                   <p>2005 – 2008</p>
                   <div class="h5">SMK</div>
                 </div>
