--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <div class="card-body">
                   <div class="h5">Politeknik Meta Industri Cikarang</div>
                   <p class="category">(DevOps Engineering)</p>
-
+                   </div>
                 </div>
               </div>
               <div class="card">
