--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@
   </div>
 
 </div>
+          </div>
+        </div>
 
         <div class="section" id="contact">
           <div class="cc-contact-information" style="background-image: url('images/staticmap2.png')">
