--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CV</title>
+  <title>CV Adi Purnomo</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
   <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
@@ -58,19 +58,19 @@
                 <div class="h2 title">Adi Purnomo</div>
                 <p class="category text-white">Web Developer</p><a class="btn btn-primary smooth-scroll mr-2"
                   href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a
-                  class="btn btn-primary" href="document/cv_adipurnomo.pdf" data-aos="zoom-in"
+                  class="btn btn-primary" href="document/adi_cv.pdf" data-aos="zoom-in"
                   data-aos-anchor="data-aos-anchor">Download CV</a>
               </div>
             </div>
             <div class="section">
               <div class="container">
                 <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon"
-                    href="https://web.facebook.com/wa082112242535" rel="tooltip" title="Follow me on Facebook"><i
-                      class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon"
                     href="https://twitter.com/adi_soekamthi" rel="tooltip" title="Follow me on Twitter"><i
                       class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon"
                     href="https://www.instagram.com/adi_pmo/" rel="tooltip" title="Follow me on Instagram"><i
-                      class="fa fa-instagram"></i></a></div>
+                      class="fa fa-instagram"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" 
+                    href="https://www.linkedin.com/in/adip99" rel="tooltip" title="Follow me on Linkedin"><i
+                      class="fa fa-linkedin"></i></a></div>
               </div>
             </div>
           </div>
@@ -233,45 +233,45 @@
 
         </div>
       </div>
-      <div class="section"id="education">
-        <div class="container cc-education">
-          <div class="h4 text-center mb-4 title">Education</div>
-          <div class="card">
-  <div class="row">
-    <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-      <div class="card-body cc-education-header">
-        <p>2023 – Present</p>
-        <div class="h5">Politeknik</div>
-      </div>
-    </div>
-    <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-      <div class="card-body">
-        <div class="h5">Politeknik Meta Industri Cikarang</div>
-        <p class="category">(DevOps Engineering)</p>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="card">
-  <div class="row">
-    <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-      <div class="card-body cc-education-header">
-        <p>2005 – 2008</p>
-        <div class="h5">SMK</div>
-      </div>
-    </div>
-    <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-      <div class="card-body">
-        <div class="h5">SMK Muhammadiyah 2 Ajibarang</div>
-        <p class="category">(Teknik Mekanik Otomotif)</p>
-
-      </div>
-    </div>
-  </div>
-
-</div>
+      <div class="section" id="education">
+  <div class="container cc-education">
+    <div class="h4 text-center mb-4 title">Education</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p>2022 – Present</p>
+            <div class="h5">Polytechnic</div>
           </div>
         </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Politeknik Meta Industri Cikarang</div>
+            <p class="category">(DevOps Engineering)</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p>2005 – 2008</p>
+            <div class="h5">Vocational High School</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">SMK Muhammadiyah 2 Ajibarang</div>
+            <p class="category">(Automotive Mechanical Engineering)</p>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
 
         <div class="section" id="contact">
           <div class="cc-contact-information" style="background-image: url('images/staticmap2.png')">
@@ -350,11 +350,12 @@
       </div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link"
-          href="https://web.facebook.com/wa082112242535"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a
+      <div class="container text-center"><a
           class="cc-twitter btn btn-link " href="https://twitter.com/adi_soekamthi"><i class="fa fa-twitter fa-2x "
             aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/adi_pmo/"><i
-            class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
+            class="fa fa-instagram fa-2x " aria-hidden="true"></i></a>
+            <a class="cc-linkedin btn btn-link" href="https://www.linkedin.com/in/adip99/"><i
+            class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a></div>
       <div class="h4 title text-center">Adi Purnomo</div>
       <div class="text-center text-muted">
         <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com"
